# skryfwys

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
apps/browser-extension/: README.md  background.js  content.js  manifest.json  options.css  options.html  options.js  package.json  popup.css  popup.html  popup.js
apps/desktop/: README.md
apps/ios/: README.md
apps/office-addin/: README.md  manifest.outlook.xml  manifest.word.xml  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
data/derived/: leipzig_afrikaans_frequencies.tsv
docs/: API.md  ARCHITECTURE.md  BROWSER_EXTENSION.md  DATA_SOURCES_AND_LICENCES.md  DECISIONS.md  DEPLOYMENT.md  EVALUATION_REPORT.md  IMPLEMENTATION_PLAN.md  IOS_INTEGRATION.md  LEIPZIG_FREQUENCY_SUPPLEMENT.md  LIMITATIONS.md  OFFICE_ADDIN.md  PRIVACY.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  SECURITY.md  TEST_STRATEGY.md  THREAT_MODEL.md  WINDOWS_SETUP.md
infrastructure/: Caddyfile  README.md  api.Dockerfile  compose.production.yml  managed-hosting.md  production.env.example  web.Dockerfile  web.nginx.conf
scripts/: backup.ps1  build.ps1  build_leipzig_frequencies.py  common.ps1  dev.ps1  docker.ps1  evaluate.ps1  lint.ps1  restore.ps1  security-check.ps1  setup.ps1  test.ps1  typecheck.ps1
services/: __init__.py
tests/: conftest.py  test_engine_unicode.py  test_model_gateway.py  test_rules.py  test_spelling.py
(+63 files in other folders)
