[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skryfwys"
version = "0.1.0"
description = "Afrikaans writing assistant foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<0.117",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.35,<0.36",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<0.29",
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<0.13",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["services*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

